fix: padding on mobile

--- a/packages/shared/src/components/modals/PostModal.module.css
+++ b/packages/shared/src/components/modals/PostModal.module.css
@@ -29,11 +29,13 @@
     border-radius: 0;
     width: 100vw;
     max-width: 100vw;
+    padding-bottom: 4rem;
 
     @screen tablet {
       flex-direction: row;
-      height: calc(100vh - 4rem);
-    }
+      min-height: calc(100vh - 4rem);
+      padding-bottom: 0;
+  }
 
     @screen laptop {
       height: unset;
@@ -43,7 +45,6 @@
       border: 1px solid var(--theme-divider-secondary);
       margin-top: 3.5rem;
       margin-bottom: 3.5rem;
-      position: relative;
     }
   }
 }
